<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    android:orientation="horizontal"
    tools:context=".fragments.information.InformationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMain"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTopicFIT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_style_without_solid"
                android:textAlignment="center"
                android:textColor="#f5f5f5"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_style">

                <ImageSwitcher
                    android:id="@+id/imageSwitcher"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/todo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonBack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/back"
                        android:layout_margin="5dp"
                        android:textAllCaps="false"
                        android:background="@drawable/button_style"
                        android:layout_weight="1"
                        tools:ignore="ButtonStyle,RtlSymmetry" />

                    <Button
                        android:id="@+id/buttonForward"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/forward"
                        android:layout_margin="5dp"
                        android:textAllCaps="false"
                        android:background="@drawable/button_style"
                        android:layout_weight="1"
                        tools:ignore="ButtonStyle,RtlSymmetry" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_style_without_solid"
                android:orientation="vertical">

                <WebView
                    android:id="@+id/webViewFIT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    tools:ignore="WebViewLayout" />

                <Button
                    android:id="@+id/buttonGoTestFIT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_style"
                    android:text="@string/pass_test"
                    android:textAllCaps="false"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
