<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".fragments.test.TestFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="2"
        android:background="@drawable/button_style"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/test_quiz"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textViewTopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/topic_test"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:gravity="center"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/textViewQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_test"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="23sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonRestart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:background="@drawable/button_style"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="10dp"
                android:text="@string/restart"
                android:textAlignment="center"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle,RtlCompat,RtlHardcoded,RtlSymmetry" />

            <Button
                android:id="@+id/buttonBackToInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:background="@drawable/button_style"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="20dp"
                android:text="@string/back_to_info"
                android:textAlignment="center"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle,RtlCompat,RtlHardcoded,RtlSymmetry" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#fff"
            android:text="@string/count_test"
            android:layout_marginBottom="2dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:visibility="visible"
        android:background="@drawable/button_style"
        android:orientation="vertical">

        <Button
            android:id="@+id/button1Answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/color_selector"
            android:text="@string/answer"
            android:textAlignment="center"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle,RtlCompat,RtlHardcoded,RtlSymmetry" />

        <Button
            android:id="@+id/button2Answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/color_selector"
            android:text="@string/answer"
            android:textAlignment="center"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle,RtlCompat,RtlHardcoded,RtlSymmetry" />

        <Button
            android:id="@+id/button3Answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/color_selector"
            android:text="@string/answer"
            android:textAlignment="center"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle,RtlCompat,RtlHardcoded,RtlSymmetry" />

        <Button
            android:id="@+id/button4Answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/color_selector"
            android:text="@string/answer"
            android:textAlignment="center"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle,RtlCompat,RtlHardcoded,RtlSymmetry" />

    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginEnd="20dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:orientation="vertical">-->

<!--        <Button-->
<!--            android:id="@+id/buttonNext"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="5dp"-->
<!--            android:background="@drawable/button_style"-->
<!--            android:text="@string/next_q"-->
<!--            android:textAlignment="center"-->
<!--            android:textAllCaps="false"-->
<!--            tools:ignore="ButtonStyle,RtlCompat,RtlHardcoded,RtlSymmetry" />-->

<!--    </LinearLayout>-->

</LinearLayout>