<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    android:orientation="horizontal"
    tools:context=".fragments.information.SolarSystemFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_style_without_solid"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="center"
                    android:textColor="#f5f5f5"
                    android:textSize="25sp" />

                <ImageSwitcher
                    android:id="@+id/imageSwitcherSS"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/todo" />

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonBackSS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/back"
                        android:layout_margin="5dp"
                        android:textAllCaps="false"
                        android:background="@drawable/button_style"
                        android:layout_weight="1"
                        tools:ignore="ButtonStyle,RtlSymmetry" />

                    <Button
                        android:id="@+id/buttonForwardSS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/forward"
                        android:layout_margin="5dp"
                        android:textAllCaps="false"
                        android:background="@drawable/button_style"
                        android:layout_weight="1"
                        tools:ignore="ButtonStyle,RtlSymmetry" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewMass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    android:text="Маса: "
                    android:textColor="#f5f5f5"
                    android:textSize="15sp"
                    android:visibility="gone"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/textViewDiameter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    android:text="Діаметер: "
                    android:textColor="#f5f5f5"
                    android:textSize="15sp"
                    android:visibility="gone"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/textViewTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    android:text="Температура: "
                    android:textColor="#f5f5f5"
                    android:textSize="15sp"
                    android:visibility="gone"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/textViewDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    android:text="Дистанція від Сонця: "
                    android:textColor="#f5f5f5"
                    android:textSize="15sp"
                    android:visibility="gone"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/textViewMoons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    android:text="Спутники: "
                    android:textColor="#f5f5f5"
                    android:textSize="15sp"
                    android:visibility="gone"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/textViewYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    android:text="Рік: "
                    android:textColor="#f5f5f5"
                    android:textSize="15sp"
                    android:visibility="gone"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/textViewDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    android:text="День: "
                    android:textColor="#f5f5f5"
                    android:textSize="15sp"
                    android:visibility="gone"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_style_without_solid"
                android:orientation="vertical">

                <WebView
                    android:id="@+id/webView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    tools:ignore="WebViewLayout" />

                <Button
                    android:id="@+id/buttonGoTest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_style"
                    android:text="@string/pass_test"
                    android:textAllCaps="false" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
